# file-share

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
client/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
client/src/: App.jsx  main.jsx
client/src/components/: Files.jsx  Header.jsx  Login.jsx  Register.jsx  Upload.jsx
file_share/: app.py  client.py  crypto.py  main.py  server.py
file_share/templates/: index.html
server/: .dockerignore  Dockerfile  README.md  config.js  package-lock.json  package.json  server.js
server/controller/: auth_controller.js  file_controller.js  upload_controller.js
server/file_share/: app.py
server/file_share/templates/: index.html
server/routes/: index.js  upload_router.js
server/tests/: conftest.py
tests/: test_file_share.py
