[tool.poetry]
name = "file-share"
version = "0.1.0"
description = "simple file transfer app utilizing socket and threading"
authors = ["Daniel Lee <daniel.lee@circleci.com>"]

packages =[
    {include = "file_share"}
]

[tool.poetry.scripts]
file-share = "file_share.main:run"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
typer = {extras = ["all"], version = "^0.7.0"}
cryptography = "^38.0.4"
pandas = "^1.5.2"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
